# Tuxiaolai_Toolbox

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.codebuddy/memory/: 2026-06-19.md  2026-06-20.md  MEMORY.md
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: toolchain-msvc.cmake
docs/: CODING_STANDARDS.md  DESIGN_DECISIONS.md  INDEX.md  PROJECT_DESIGN_TEMPLATE.md
src/: CMakeLists.txt  main.cpp
src/app/: README.md  ToolboxWindow.cpp  ToolboxWindow.h
src/file-manager/: CMakeLists.txt  CachedIconProvider.cpp  CachedIconProvider.h  MainWindow.cpp  MainWindow.h  PROJECT.md  Qwen建议1.md  README.md  SettingsDialog.cpp  SettingsDialog.h  main_filemanager.cpp  resources.qrc
src/file-manager/icons/: ICONS.md
src/tubrowser/: BrowserWidget.cpp  BrowserWidget.h  CMakeLists.txt  README.md  main_browser.cpp
